# QuantMax

./: .gitignore  README.md  SPEC_TO_CODE_MAP.md  STRATEGY_SPEC.md  install.sh  pyproject.toml  run.sh
configs/: backtest.yaml  data.yaml  qlib.yaml
data/bars_1m/: 000001.parquet  000651.parquet  002415.parquet  002594.parquet  300750.parquet  600000.parquet  600519.parquet  601318.parquet  601888.parquet  603986.parquet
data/qlib_cn_1m/calendars/: 1min.txt
data/qlib_cn_1m/features/: 000001.parquet  000651.parquet  002415.parquet  002594.parquet  300750.parquet  600000.parquet  600519.parquet  601318.parquet  601888.parquet  603986.parquet
data/qlib_cn_1m/instruments/: all.txt
data/raw/: hotlist.csv  hotlist_2025.csv  themes.csv  themes_2025.csv
models/: ranker_model.pkl
scripts/: gen_2025_data.py  test_qlib_read.py  train_lgbm.py  train_model.py
src/quantopen/: __init__.py  cli.py  data_loader.py  engine.py  features.py  qlib_export.py
src/quantopen/backtest/: __init__.py  bt_core_strategy.py  bt_data.py  bt_engine.py  bt_strategy.py  bt_strategy_risk.py  costs.py  risk_filters.py  run.py  run_core.py  run_risk.py
src/quantopen/common/: __init__.py  config.py  paths.py
src/quantopen/datafeed/: __init__.py  akshare_1m.py  cache.py  hotlist.py
src/quantopen/execution/: api.py  easytrader_adapter.py
src/quantopen/ml/: features.py  labels.py
src/quantopen/models/: qlib_export.py
src/quantopen/sdk/: client.py  mock_server.py
src/quantopen/strategy/: __init__.py  api.py  loader.py  ml_strategy.py  portfolio.py  rules.py
